2012-04-23  Sancho lerena <slerena@artica.es>

	* include/functions_db.php
	operation/contracts/contract_detail.php
	peration/contacts/contact_detail.php: Instead using events to audit
	the user operations, uses Audit_db.

	* general/home.php,
	godmode/setup/newsboard.php: Newsboard now are better rendered (replacing
	\n with <br>. Added a mode to show "always" a news (with date 0000-00-00).

2012-04-20 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/integria_cron.php,
	include/functions_pop3.php: Fixed a problem with encoding creating
	incidents using mails.

2012-04-19  Sancho Lerena <slerena@artica.es>

	* operation/contracts/contract_detail.php: Added hint with date format
	for contract date search.

2012-04-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/projects/task_detail.php: Fixed a problem with task creation
	and ACLs

2012-04-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/integria_cron.php: Fixed a problem with email body encoding.
	* include/functions_pop3.php: Fixed a probme with group responsible
	when the incident is created by email.

2012-04-16  Sancho Lerena <slerena@artica.es>

	* include/integria_cron.php: Fixed call to pandora inventory
	integration, skip when not configured URL to pandora.

	* include/functions_db.php: Fixed div0.

2012-04-16 Dario Rodriguez <dario.rodriguez@artica.es> 

	*include/integria_cron.php,
	include/functions_pop3.php: Fixed an error getting from address in
	function that creates new incident reading mailbox.

2012-04-13  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Updated build.

	* include/functions_db.php: Fixed function to return visible users,
	on external users return a bad formatted array and that breaks 
	code in several places.

	* operation/search.php: Now you can search by project name.

	* operation/user_report/report_monthly.php: Put all links together to
	have a better layout.

2012-04-12  Sancho Lerena <slerena@artica.es>
